Updated some dependencies, fixed a couple bugs in the image cropper and the implementation of the flatpickr component.

--- a/src/assets/sass/partials/_forms.scss
+++ b/src/assets/sass/partials/_forms.scss
@@ -42,6 +42,7 @@
 input[type='text'],
 input[type='email'],
 input[type='password'],
+input[type='date'],
 select,
 textarea {
   height:50px;
